--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "howler": "^2.0.9",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-draggable": "^3.0.5",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
