--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-draggable": "^3.0.5",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0",
     "sass": "^1.2.1"
   },
   "scripts": {
